--- a/stylesheets/landing.css
+++ b/stylesheets/landing.css
@@ -8,7 +8,7 @@
   position: fixed;
   top: 0px;
   width: 100%;
-  background-color: rgba(33, 33, 33, .5);
+  background-color: rgba(33, 33, 33, .7);
   z-index: 5;
 }
 #nav_pitch ul {
@@ -40,16 +40,53 @@
   margin-top: -1px;
 }
 #hero_image {
-  margin-top: 150px;
-  margin-bottom: 100px;
+  margin-top: 100px;
+  margin-bottom: 50px;
   margin-left: auto;
   margin-right: auto;
-  width: 30%;
+  width: 35%;
 }
 #login_slider {
-  height: 200px;
-  margin-bottom: 100px;
   margin-left: auto;
   margin-right: auto;
-  width: 30%;
+  width: 35%;
+  margin-bottom: 150px;
+}
+#slide_login {
+  text-align: center;
+  height: 100%;
+  background-color: rgba(255, 255, 255, .1);
+}
+#login_fields {
+  display: block;
+  width: 100%;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+#login_fields input {
+  width: 40%;
+  font-size: 30px;
+  padding: 1%;
+  background-color: rgba(33, 33, 33, .5);
+  color: #FFF;
+  margin: 0 2% 0 2%;
+}
+#slide_login .buttonBar {
+  width: 80%;
+  margin-bottom: 30px;
+}
+#slide_login .button {
+  width: 50%;
+}
+#forgot_password_link {
+  margin-bottom: 20px;
+  display: inline-block;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 10px;
+}
+#pitch_2 {
+  background-color: #FFF;
+  padding: 100px;
+  font-size: 50px;
 }
