--- a/stylesheets/reset.css
+++ b/stylesheets/reset.css
@@ -19,6 +19,9 @@ time, mark, audio, video {
 	vertical-align: baseline;
 	font-family: Kalinga;
 }
+input {
+	font-family: Kalinga;	
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
