--- a/stylesheets/reset.css
+++ b/stylesheets/reset.css
@@ -17,10 +17,12 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	font-family: Kalinga;
 }
 input {
 	font-family: Kalinga;	
+}
+html {
+	font-family: Kalinga;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
